Refactor: Eliminados archivos innecesarios (add.html, edit_lookup.html, web/README.md, zip), removidas rutas redundantes, y menú simplificado

--- a/web/templates/menu.html
+++ b/web/templates/menu.html
@@ -24,16 +24,10 @@
     <p class="menu-description">Pega el contenido del log directamente y analízalo al instante</p>
   </a>
 
-  <a href="/add" class="menu-card">
-    <div class="menu-icon">➕</div>
-    <h3 class="menu-title">Agregar mod</h3>
-    <p class="menu-description">Añade manualmente un nuevo mod a la lista de control</p>
-  </a>
-
   <a href="/mods" class="menu-card">
     <div class="menu-icon">📊</div>
-    <h3 class="menu-title">Ver lista de mods y editar</h3>
-    <p class="menu-description">Visualiza todas las listas de mods permitidos y prohibidos</p>
+    <h3 class="menu-title">Gestionar mods</h3>
+    <p class="menu-description">Ver, agregar, editar y eliminar mods de la lista</p>
   </a>
 </div>
 {% endblock %}
