--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -41,8 +41,14 @@
               </ul>
             </li>
             {% if current_user.is_admin() %}
-            <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('admin_users') }}">Usuarios</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown">
+                Admin
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="adminDropdown">
+                <li><a class="dropdown-item" href="{{ url_for('admin_users') }}">👥 Usuarios</a></li>
+                <li><a class="dropdown-item" href="{{ url_for('admin_security') }}">🔒 Seguridad</a></li>
+              </ul>
             </li>
             {% endif %}
           </ul>
